started linking pages

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style.css">
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -30,9 +32,13 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+
     <!-- <script src="javascriptfilename.js"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+    <!-- Semantic UI React -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
   </head>
 
   <body>
@@ -45,23 +51,14 @@
         </div>
       </div>
 
-      <div class="title item"><a class="text">SeaCode Bank</a></div>
+      <div class="title item"><a class="text" href="index.html">SeaCode Bank</a></div>
 
       <div class="right menu">
-        <div class="link item"><a class="text">Home</a></div>
+        <div class="link item"><a class="text" href="index.html">Home</a></div>
 
-          <div class="link item"><a class="text">About Us</a></div>
+        <div class="link item"><a class="text" href="about.html">About Us</a></div>
 
-        <div class="ui dropdown item">
-          <div class="text">Login</div>
-          <i class="dropdown icon"></i>
-          <div class="menu">
-            <div class="ui input"><input type="text" placeholder="Username"></div>
-            <div class="ui input"><input type="text" placeholder="Password"></div>
-            <button class="ui primary button">Login</button>
-            <div class="link item"><a class="text">New? Create New Account</a></div>
-          </div>
-        </div>
+        <div class="link item"><a class="text" href="login.html">Login</a></div>
 
         <div class="link item">
           <div class="ui transparent icon input">
@@ -79,7 +76,7 @@
       </h2>
     </div>
 
-    <img class="ui fluid image" src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&w=1000&q=80" alt="Island Snow Hawaii" itemprop="logo">
+    <img class="ui fluid image" src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&w=1000&q=80" alt="sea" itemprop="logo">
 
     <div class="footer-background">
       <div class="ui two column grid container">
