work in progress

--- a/webapp/public/login.html
+++ b/webapp/public/login.html
@@ -45,12 +45,12 @@
 
   <h1 id="demo" class="ui center aligned header">Login</h1>
 
-
+  <script src="login.js">LoginForm();</script>
 
 <script>
   $('.ui.dropdown')
       .dropdown();
 </script>
-
+<script src="login.js " type="text/javascript ">
 </body>
 </html>
