--- a/webapp/public/about.html
+++ b/webapp/public/about.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style.css">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,6 +53,9 @@
 
 <!-- CHANGE ME to public disclosure-->
 <div class="public-disclosure">
+  <div class="dummy-text">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
   <div class="ui fluid placeholder">
     <div class="image header">
       <div class="line"></div>
