--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -33,7 +33,7 @@
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
-    <!-- <script src="javascriptfilename.js"></script> -->
+    <!-- <script src="login.js"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
@@ -58,7 +58,8 @@
 
         <div class="link item"><a class="text" href="about.html">About Us</a></div>
 
-        <div class="link item"><a class="text" href="login.html">Login</a></div>
+        <div class="link item"><a onclick="LoginForm();" class="text" href="login.html">Login</a></div>
+        <script src="login.js"></script>
 
         <div class="link item">
           <div class="ui transparent icon input">
