--- a/webapp/public/login.html
+++ b/webapp/public/login.html
@@ -34,23 +34,17 @@
 
     <div class="link item"><a class="text" href="login.html">Login</a></div>
 
-    <div class="link item">
-      <div class="ui transparent icon input">
-        <i class="search icon"></i>
-      </div>
-    </div>
-
   </div>
 </div>
 
   <h1 id="demo" class="ui center aligned header">Login</h1>
 
-  <script src="login.js">LoginForm();</script>
+<!--  <script src="login.js">LoginForm();</script> -->
 
 <script>
   $('.ui.dropdown')
       .dropdown();
 </script>
-<script src="login.js " type="text/javascript ">
+
 </body>
 </html>
