login html page in-progress

--- a/webapp/public/pages/about.html
+++ b/webapp/public/pages/about.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../style.css">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
           src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
   <!-- <script src="login.js"></script> -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
@@ -28,13 +28,13 @@
     </div>
   </div>
 
-  <div class="title item"><a class="text" href="index.html">SeaCode Bank</a></div>
+  <div class="title item"><a class="text" href="../index.html">SeaCode Bank</a></div>
 
   <div class="right menu">
-    <div class="link item"><a class="text" href="index.html">Home</a></div>
+    <div class="link item"><a class="text" href="../index.html">Home</a></div>
 
     <!-- <div class="link item"><a class="text" href="about.jsx">About Us</a></div> -->
-    <div class="link item"><a class="text" href="about.html">About Us</a></div>
+    <div class="link item"><a class="text" href="pages/about.html">About Us</a></div>
 
     <div class="link item"><a class="text" href="login.html">Login</a></div>
 
